// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field should match snapshot 1`] = `
<form
  noValidate={true}
  onSubmit={[Function]}
/>
`;

exports[`Form should match snapshot 1`] = `
<form
  noValidate={true}
  onSubmit={[Function]}
/>
`;

exports[`FormPage should match snapshot 1`] = `
<form
  noValidate={true}
  onSubmit={[Function]}
>
  <div>
    <div
      className="FormPage__PagesNavigation-fkwltY fNrFoB"
    >
      <span
        className="FormPage__NavItem-kKpNlV khEGNc"
      >
        foo
      </span>
    </div>
    bar
    <button
      onClick={[Function]}
    >
      Back
    </button>
    <button
      onClick={[Function]}
    >
      Next
    </button>
  </div>
</form>
`;

exports[`components AppContainer component should match snapshot 1`] = `
<div
  className="AppContainer-fyEKNQ gLmZYI"
/>
`;

exports[`components CheckboxInput component should match snapshot 1`] = `
Array [
  <input
    type="checkbox"
  />,
  <label
    htmlFor={undefined}
  />,
  <p
    className="CheckboxInput__Error-ddbWLI wrdjp"
  />,
]
`;

exports[`components TextInput component should match snapshot 1`] = `
Array [
  <label
    htmlFor={undefined}
  >
    : 
    <span
      className="TextInput__Red-eBiRuV eTAOJM"
    >
      *
    </span>
  </label>,
  <br />,
  <input
    type="text"
  />,
  <p
    className="TextInput__Error-bPOzPg jtXBAh"
  />,
]
`;
